# SyncWatchers

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  SetupWebFramework.cmake  SyncWatchers.sln  events.json  open_api_specification.yaml
.github/workflows/: ci.yml  continuous_integration.yml
Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters  core.json
Core/source/: CreateRoom.cpp
Core/source/executors/: CreateRoom.cpp  CreateRoom.h  Notifications.cpp  Notifications.h  Rooms.cpp  Rooms.h  Users.cpp  Users.h
Core/source/models/: RoomModel.cpp  RoomModel.h  UserModel.cpp  UserModel.h  UserToRoomModel.cpp  UserToRoomModel.h
Core/source/notifications/: NotificationsServer.cpp  NotificationsServer.h
Events/: CMakeLists.txt  Events.vcxproj  Events.vcxproj.filters
Events/src/: EventId.h  EventsManager.cpp  EventsManager.h  IEvent.h  IEventsManager.h  Server.cpp  Server.h
Executors/: CMakeLists.txt
Executors/ContentExecutor/: CMakeLists.txt  ContentExecutor.vcxproj  ContentExecutor.vcxproj.filters  content_config.json  content_web.json
Executors/ContentExecutor/src/: ContentExecutor.cpp  ContentExecutor.h  DownloadContentExecutor.cpp  DownloadContentExecutor.h  UploadContentExecutor.cpp  UploadContentExecutor.h
Executors/ContentExecutor/src/Events/: OnUploadContentEvent.cpp  OnUploadContentEvent.h
Executors/ContentExecutor/src/events/: OnUploadContentEvent.cpp
Executors/CoreDatabaseExecutor/: CMakeLists.txt  CoreDatabaseExecutor.vcxproj  CoreDatabaseExecutor.vcxproj.filters  core_database_config.json  core_database_web.json
Executors/CoreDatabaseExecutor/src/: CoreDatabaseExecutor.cpp  CoreDatabaseExecutor.h  CreateTableQueries.cpp  CreateTableQueries.h  InviteLinkExecutor.cpp  InviteLinkExecutor.h  RoomsExecutor.cpp  RoomsExecutor.h  UsersExecutor.cpp  UsersExecutor.h
Executors/CoreDatabaseExecutor/src/Events/: OnDeleteRoomEvent.cpp  OnDeleteRoomEvent.h  OnInviteEvent.cpp  OnInviteEvent.h  OnUpdateRoleEvent.cpp  OnUpdateRoleEvent.h  OnUserNameUpdateEvent.cpp  OnUserNameUpdateEvent.h
Executors/VideoExecutor/: CMakeLists.txt  VideoExecutor.vcxproj  VideoExecutor.vcxproj.filters  video_config.json  video_web.json
Executors/VideoExecutor/src/: ChangeVideoExecutor.cpp  ChangeVideoExecutor.h  PlayExecutor.cpp  PlayExecutor.h  RewindExecutor.cpp  RewindExecutor.h  StopExecutor.cpp  StopExecutor.h
Executors/VideoExecutor/src/Events/: ChangeVideoEvent.cpp  ChangeVideoEvent.h  PlayEvent.cpp  PlayEvent.h  RewindEvent.cpp  RewindEvent.h  StopEvent.cpp  StopEvent.h
FetchWebFramework/: FetchWebFramework.cmake  FetchWebFramework.vcxproj
SyncWatcherClient/android/app/: build.gradle.kts
SyncWatcherClient/lib/widgets/: video_player.dart
SyncWatcherClient/test/: widget_test.dart
SyncWatcherClient/windows/: CMakeLists.txt
SyncWatcherClient/windows/runner/: main.cpp
SyncWatchers/: CMakeLists.txt  SyncWatchers.vcxproj  SyncWatchers.vcxproj.filters  config.json  web.json
SyncWatchers/source/: Main.cpp
SyncWatchers/src/: Main.cpp  StateExecutor.cpp  StateExecutor.h
SyncWatchersClient/: .gitignore  CMakeLists.txt  README.md  pubspec.yaml
SyncWatchersClient/android/app/src/main/: AndroidManifest.xml
SyncWatchersClient/android/app/src/main/kotlin/com/lazypanda07/sync_watchers_client/: MainActivity.kt
SyncWatchersClient/lib/: main.dart  settings.dart  web_listener.dart
SyncWatchersClient/lib/web/: events.dart  requests.dart
SyncWatchersClient/lib/widgets/: main_widget.dart  room_menu.dart  room_screen.dart  upload_button.dart  user_name_screen.dart  video_player.dart  video_screen.dart  videos_list.dart
SyncWatchersClient/lib/widgets/screens/: room_screen.dart  settings_screen.dart  user_name_screen.dart  video_screen.dart
SyncWatchersClient/test/: widget_test.dart
SyncWatchersClient/windows/runner/: Runner.rc
Tests/: CMakeLists.txt  CoreFunctionality.cs  PriorityOrderer.cs  TestPriorityAttribute.cs  Tests.sln  core_tests.py  main.cpp
Tests/cases/: basic_functionality.cpp  user_actions.cpp
Tests/scripts/: run_tests.sh
Tests/utils/: ProcessWrapper.cpp  ProcessWrapper.h  Socket.cpp  Socket.h
Utils/: CMakeLists.txt  Utils.vcxproj  Utils.vcxproj.filters
Utils/src/: Utils.cpp  Utils.h
cmake/: FetchWebFramework.cmake
configs/: app_localization_modules.json  config.json
